# tauri-plugin-keyring-store

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/tauri-app/: README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
examples/tauri-app/src/: App.vue  ipc-session.ts  keyring.ts
examples/tauri-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: delete_passwords.toml  export_passwords_encrypted.toml  export_passwords_plain.toml  get_passwords.toml  import_passwords_encrypted.toml  import_passwords_plain.toml  password_exists.toml  set_passwords.toml
permissions/schemas/: schema.json
src/: backend.rs  backup_crypto.rs  commands.rs  crypto.rs  error.rs  lib.rs  models.rs  naming.rs  plugin.rs  store.rs
tests/: account_encoding.rs  keyring_live.rs  models_serde.rs
tests/guest-js/: api.test.ts
