[package]
name = "tauri-plugin-keyring"
version = "0.1.0"
authors = ["s00d"]
description = "Stronghold-inspired secrets and crypto helpers backed by the OS credential store (keyring-core)."
edition = "2021"
rust-version = "1.77.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/s00d/tauri-plugin-keyring"
documentation = "https://docs.rs/tauri-plugin-keyring"
keywords = ["tauri", "tauri-plugin", "keyring", "credential", "secrets"]
categories = ["authentication", "api-bindings"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keyring"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["crypto"]
# SLIP10 / BIP39 / Ed25519 procedures via `iota-crypto` only. Encrypted backup (Argon2 + ChaCha) is always built.
crypto = ["dep:iota-crypto"]

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
keyring-core = "1"
iota-crypto = { version = "0.23", optional = true, default-features = false, features = [
  "bip39",
  "bip39-en",
  "slip10",
  "ed25519",
  "random",
]}
argon2 = { version = "0.5", default-features = false, features = ["std"] }
chacha20poly1305 = { version = "0.10" }
getrandom = { version = "0.4" }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", default-features = false, features = [
  "crypto-rust",
] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }

[dev-dependencies]
rand = "0.10"
